--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -141,14 +141,13 @@ de:
             aktualisieren wir sie. Das heißt, wir tauschen sie aus.
           question: Sind die Informationen bei clarat aktuell?
         question_7:
-          answer: |
+          answer: |-
             Einige Angebote bei <b>clarat family</b> und bei <b>clarat refugees</b>
             kannst du von überall aus nutzen. Egal, wo du wohnst. Es gibt viele
             Angebote, bei denen man dir am Telefon oder im Internet hilft. Das
             heißt, per E-Mail, im Chat oder im Forum. Viele andere Angebote kannst
             du genau da nutzen, wo du wohnst. Bei <b>clarat refugees</b> findest du
-            bald Angebote für viele Großstädte in Deutschland. Wir haben aber mit
-            Berlin angefangen. Bei <b>clarat family</b> haben wir in Berlin
+            bald Angebote für viele Großstädte in Deutschland. Im Moment sind das Berlin, Köln und Düsseldorf. Bei <b>clarat family</b> haben wir in Berlin
             angefangen. Hier gibt es sehr viele Angebote. Aber wir sammeln weiter.
             Bald auch für weitere, große Städte in Deutschland.
           question: Gibt es clarat für ganz Deutschland?
@@ -977,6 +976,12 @@ de:
         wol: Wol
         zho: Zho
         zza: Zza
+        ber: Ber
+        kin: Kin
+        pus: Pus
+        skr: Skr
+        tgl: Tgl
+        twi: Twi
       section:
         family: Family
         refugees: Refugees
@@ -1180,6 +1185,8 @@ de:
         wol: Wolof - wɔlɔf
         zho: Chinesisch - 普通话 / 普通話
         zza: Zaza - Zazaki / Kırmancki
+        pus: Paschtu - پښتو‎
+        twi: Twi - Twi
     single_search_result:
       encounters:
         chat: Chat
@@ -1336,7 +1343,7 @@ de:
           twitter: Twitter
           youtube: Youtube
       what: Worum geht's?
-      who: Wer bietet diese Hilfe an?
+      who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
         email: 'E-Mail: '
@@ -1591,7 +1598,7 @@ de:
           refugees.
     impressum:
       heading: Impressum
-      notice: clarat hilft dir dabei, Hilfe zu finden. Aber bei clarat bekommst du keine Beratung. Dafür gibt es Experten. Und genau die kannst du über uns finden.
+      notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
       responsible_html: |
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
