--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -44,11 +44,11 @@ ar:
             var: link_to_family_movie
           question: "ما هي كلارات؟"
         question_10:
-          answer: "تمويل <b>كلارات الأسرة</b> و<b>كلارات للاجئين</b> يأتي من %{link_to_bsz}."
+          answer: "تمويل <b>كلارات الأسرة</b> و<b>كلارات للاجئين</b> يأتي في الأساس من %{link_to_bsz}. إلا أننا نود في المستقبل جلب مزيد من الموردين."
           link_1:
             name: "مؤسسة بتكيزير المستقبل"
             target: blank_
-            url: http://www.benckiser-stiftung.org
+            url: http://www.benckiser-stiftung.org/de
             var: link_to_bsz
           question: "من يمول كلارات؟"
         question_11:
@@ -97,7 +97,7 @@ ar:
           answer: "نحن ننظر بشكل دائم إذا ما كانت المعلومات في كلارات لاتزال معاصرة. لأنه بهذه الطريقة  فقط يمكننا مساعدة الأطفال والشباب والأسر واللاجئين. فإذا لم تكن المعلومات لاتزال صحيحة فإنه يتم  تحديثها أي أننا نستبدلها. "
           question: "هل المعلومات في كلارات حديثة؟"
         question_7:
-          answer: "بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الأستفادة منها من  كل الأنحاء؛ سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق التليفون او الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الإستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد عروضا في كل ألمانيا. اما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين؛ هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر وقريبا سيكون لمدن كبرى أخرى في ألمانيا."
+          answer: "بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، وكولونيا ودوسلدورف. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر. وقريبا سيكون لمدن كبرى أخرى في ألمانيا."
           question: "هل توجد كلارات لألمانيا كلها؟"
         question_8:
           answer: "كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}."
@@ -108,7 +108,7 @@ ar:
             var: ref_to_how_many_languages
           question: "ما هو المميز في كلارات؟"
         question_9:
-          answer: "كلارات إحدي مشاريع مؤسسة بنكيزير للمستقبل%{link_to_bsz}. وهي مجموعة مؤسسات والتي تقوم منذ وقت طويل بأعمال من أجل الأطفال والشباب. والآن للاجئين من خلال كلارات للاجئين. هنا يمكنك مشاهدة هذا الفيلم التسجيلي لمعرفة الكثير عن المؤسسة %{link_to_bsz_movie}. فكرة كلارات جاءت في منتصف عام 2014. وفريق عمل كلارات تكون منذ سبتمبر 2014. إذا أردت معرفة الكثير عن فريق العمل انقر هنا %{link_to_about_us}."
+          answer: "نشأت كلارات في 2014 من خلال %{link_to_bsz}. وهي مجموعة مؤسسات تقوم منذ وقت طويل بأعمال من أجل الأطفال والشباب. والآن للاجئين من خلال كلارات للاجئين. هنا يمكنك من خلال %{link_to_bsz_movie} معرفة الكثير عن المؤسسة."
           link_1:
             name: "مؤسسة بنكيزير المستقبل"
             target: _blank
@@ -122,7 +122,7 @@ ar:
           link_3:
             name: "هنا"
             target: _blank
-            url: http://www.clarat.org/ar/refugees/about-us
+            url: http://www.clarat.org/ueber-uns
             var: link_to_about_us
           question: "من وراء كلارات؟"
       section_2:
@@ -313,7 +313,7 @@ ar:
           other: "لك <strong>%{count} كلارات اللاجئين</strong>-عروض"
           two: "لك <strong>%{count} كلارات اللاجئين</strong>-عرض"
           zero: NOTRANSLATE
-      last_update: Last update
+      last_update: "تم التغيير مؤخرا"
       obfuscated_email: "عنوان البريد الإليكتروني الخاض بك"
       refugees:
         heading: عروض كلارات اللاجئين الخاصة بك بالنسبة ل  <span id="secure-email-0">%{email}</span>
@@ -508,15 +508,17 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
+        pus: Pus
+        twi: Twi
       section:
         family: Family
         refugees: Refugees
       sort:
-        nearby: 
-        relevance: 
+        nearby: "على مقربة"
+        relevance: "الأهمية"
       sort_order:
-        nearby: 
-        relevance: 
+        nearby: "على مقربة"
+        relevance: "الأهمية"
   js:
     ajax_error:
       error: "خطأ في البحث"
@@ -525,9 +527,7 @@ ar:
     autocomplete_footer: "كل %{results} نتائج البحث ل „%{query}“"
     categories_sidebar:
       all_categories: "جميع الفئات"
-    cookie_warning_html: |-
-      الكوكيز تساعدنا على أن تظل صفحتنا متوفرة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز
-      <a href="/ar/refugees/إرشادات-حماية-البيانات-الشخصية">Mehr</a>
+    cookie_warning_html: الكوكيز تساعدنا على أن تظل صفحتنا متاحة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز. <a href="/refugees/datenschutzhinweise">Mehr</a>
     geolocation:
       error: "لم يتم العثور على موقع، من فضلك أدخل اسم الموقع ذاتيا."
       get: "استخدم موقعي !"
@@ -685,6 +685,11 @@ ar:
         wol: "لغة ولوفية - wɔlɔf"
         zho: "لغة صينية - 普通话 / 普通話"
         zza: "لغة زازاكية - Zazaki / Kırmancki"
+        ber: "لغة أمازيغية - Tamaziɣt"
+        pus: "لغة بشتوية - پښتو‎"
+        skr: "لغة صربية كرواتية - српскохрватски / hrvatskosrpski"
+        tgl: "لغة تاغالوغية - Tagálog"
+        twi: "التوي - Twi"
     single_search_result:
       encounters:
         chat: "دردشة"
@@ -768,10 +773,10 @@ ar:
           encounter:
             chat: "دردشة"
             email: "إيميل"
-            fax: 
+            fax: "فاكس"
             forum: "منتدى"
             hotline: "تليفون"
-            letter: 
+            letter: "بريد"
             online-course: "دورة بالإنترنت"
             portal: "قائمة العناوين"
           exclusive_gender:
@@ -971,7 +976,7 @@ ar:
         text: "عن طريق كلارات يمكنك أن تجد مساعدة. \nففي ألمانيا يوجد العديد من العروض التي تدعم الأطفال والشباب والأسرة. \nوكذلك الكثير من العروض للاجئين. ولكن في الغالب يكون من الصعب الوصول الى هذه العروض. \nفنحن هنا  لنساعدك؛ فإذا كان الأمر يتعلق بالأسرة فإبحث في كلارات الأسرة\n أما إذا كان خاص باللاجئين فإبحث في كلارات اللاجئين\n"
     impressum:
       heading: Impressum
-      notice: 
+      notice: "كلارات عبارة عن محرك بحث. كلارات يبلغك بمكان الحصول على المساعدة. مثلا، أين تجد خبراء يساعدونك في حل مشكلتك. أما كلارات نفسه فبإمكانه مساعدتك في البحث فقط."
       responsible_html: |-
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
@@ -1312,7 +1317,7 @@ ar:
     search_locations: "بحث_المواقع"
     subscribe: subscribe
     subscriptions: "إشتراكات"
-    ueber-uns: about-us
+    ueber-uns: "نبذة عنا"
     unsubscribe: unsubscribe
     update_requests: "طلبات-تحديث"
     users: "مستخدم"
@@ -1322,10 +1327,7 @@ ar:
     show:
       cta_report_errors: |
         هل اكتشفت خطأّ؟
-      google_translate_explanation: |
-        الترجمة تتم بشكل تلقائي من خلال برنامج جوجل للترجمة.
-        حيث أنه يوجد في الغالب أخطاءا لغوية. ومن الممكن أيضا أن تبدو الترجمة غريبة ومضحكة
-        لذلك  يفضل أن تلقى نظرة على النص الألماني
+      google_translate_explanation: "يمكنك بأعلى الصفحة النقر على لغتك. ومن ثم يمكنك قراءة كلارات بلغتك. هناك جزء من الترجمة تم من خلال Google Translate API. لذلك قد يوجد مع الأسف بعد الأخطاء اللغوية. ومن الممكن أن تبدو بعض العبارات مضحكة."
     tooltips:
       welcome:
         advanced_search: "هل تريد جعل البحث محددا أكثر؛ إذا انقر هنا. سيفتح نافذة بها إختيارات"
