--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -26,7 +26,7 @@ de:
         heading: Wer, wie, was?
         question_1:
           answer: |
-            clarat ist ein Portal, auf dem man Unterstützungsangebote findet. Wir
+            TEST clarat ist ein Portal, auf dem man Unterstützungsangebote findet. Wir
             helfen dir dabei, Hilfe zu finden. Aber wir beraten nicht. Dafür gibt es
             Experten. Und genau die kannst du bei uns finden. Es gibt <b>clarat
             family</b> und <b>clarat refugees</b>:
