--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -612,8 +612,6 @@ fr:
         wol: Wol
         zho: Zho
         zza: Zza
-        pus: Pus
-        twi: Twi
       section:
         family: Family
         refugees: Refugees
@@ -722,6 +720,8 @@ fr:
         category_query: 
         default: 
       show_personal: Montre les services locaux
+      off_canvas:
+        result_text: Show %{result_count} results
     shared:
       current_and_original_locale:
         "'150'": Langue des signes allemande
@@ -796,8 +796,6 @@ fr:
         zho: Langues chinoises - 普通话 / 普通話
         zza: |
           Zazaki - Zazaki / Kırmancki
-        pus: Pachto - پښتو‎
-        twi: Twi - Twi
     single_search_result:
       encounters:
         chat: discussion en ligne
