--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -20,6 +20,18 @@ de:
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
   cells:
+    contact_people:
+      dr: Dr.
+      email: 'E-Mail: '
+      fax: 'Fax: '
+      female: Frau
+      heading: Wo kannst du dich melden?
+      male: Herr
+      obfuscated_email: |
+        Diese E-Mail-Adresse wird zum Spam-Schutz durch JavaScript
+        verschlüsselt. Bitte aktiviere JavaScript um sie lesen zu können.
+      phone: 'Telefon: '
+      prof_dr: Prof. Dr.
     faq:
       heading: Häufige Fragen
       section_1:
@@ -1068,6 +1080,8 @@ de:
         enlarge_map: Karte vergrößern
         headline_small_map: Angebote vor Ort auf der Karte
       more: Weitere Telefon- und Onlineangebote
+      off_canvas:
+        result_text: "%{result_count} Suchergebnisse anzeigen"
       personal_offers:
         one: Ein Angebot vor Ort
         other: "%{count} Angebote vor Ort"
@@ -1340,22 +1354,9 @@ de:
           twitter: Twitter
           youtube: Youtube
       what: Worum geht's?
-      who: Wer bietet diese Hilfe an?
-      who_contact_people:
-        dr: Dr.
-        email: 'E-Mail: '
-        fax: 'Fax: '
-        female: Frau
-        male: Herr
-        obfuscated_email: |
-          Diese E-Mail-Adresse wird zum Spam-Schutz durch JavaScript
-          verschlüsselt. Bitte aktiviere JavaScript um sie lesen zu können.
-        phone: 'Telefon: '
-        prof_dr: Prof. Dr.
+      who: Wo bekommst du diese Hilfe?
       who_location:
         organizations: 'Ein Angebot von:'
-      who_section:
-        heading: Wo kannst du dich melden?
   opening:
     display_string:
       appointment: nach Vereinbarung
@@ -1671,6 +1672,9 @@ de:
       intro_first_part: Wir freuen uns über Ihr Interesse an unserer Webseite www.clarat.org und an der clarat gGmbH. Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Selbstverständlich werden wir personenbezogene Daten ausschließlich im Rahmen der geltenden Bestimmungen des deutschen Datenschutzrechts erheben und verwenden.
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
+    section_choice:
+      title:
+        refugees: 
     shared:
       address:
         email: |
@@ -1688,6 +1692,7 @@ de:
     emails: emails
     faq: haeufige-fragen
     haeufige-fragen: haeufige-fragen
+    home: home
     impressum: impressum
     new: new
     offers: angebote
