--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,18 @@ en:
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
   cells:
+    contact_people:
+      dr: Dr.
+      email: 'Email: '
+      fax: 'Fax: '
+      female: Ms.
+      heading: How can you get in touch?
+      male: Mister
+      obfuscated_email: |
+        This e-mail address is protected from spam bots, you must enable
+        JavaScript in your browser to view it.
+      phone: 'Telephone: '
+      prof_dr: Prof. Dr.
     faq:
       heading: Frequently asked questions
       section_1:
@@ -1013,6 +1025,8 @@ en:
         enlarge_map: Enlarge map
         headline_small_map: Local offers on the map
       more: More remote offers
+      off_canvas:
+        result_text: Show %{result_count} results
       personal_offers:
         one: One local offer
         other: "%{count} local offers"
@@ -1032,8 +1046,6 @@ en:
         category_query: 
         default: 
       show_personal: Show local offers
-      off_canvas:
-        result_text: Show %{result_count} results
     shared:
       current_and_original_locale:
         "'150'": German Sign Language - Deutsche Gebärdensprache
@@ -1261,21 +1273,8 @@ en:
           youtube: Youtube
       what: What is this about?
       who: Who offers this help?
-      who_contact_people:
-        dr: Dr.
-        email: 'Email: '
-        fax: 'Fax: '
-        female: Ms.
-        male: Mister
-        obfuscated_email: |
-          This e-mail address is protected from spam bots, you must enable
-          JavaScript in your browser to view it.
-        phone: 'Telephone: '
-        prof_dr: Prof. Dr.
       who_location:
         organizations: 'An offer provided by:'
-      who_section:
-        heading: How can you get in touch?
   opening:
     display_string:
       appointment: by appointment
@@ -1594,6 +1593,9 @@ en:
       intro_first_part: Wir freuen uns über Ihr Interesse an unserer Webseite www.clarat.org und an der clarat gGmbH. Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Selbstverständlich werden wir personenbezogene Daten ausschließlich im Rahmen der geltenden Bestimmungen des deutschen Datenschutzrechts erheben und verwenden.
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
+    section_choice:
+      title:
+        refugees: 
     shared:
       address:
         email: |
@@ -1611,6 +1613,7 @@ en:
     emails: emails
     faq: frequently-asked-questions
     haeufige-fragen: frequently-asked-questions
+    home: 
     impressum: imprint
     new: new
     offers: offers
